@@ -1,3 +1,9 @@
+2008-05-05  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* cormissing.css: Properly indent parameters. Added support for
+	collapse/expand of nested delegates, interfaces of delegates/enums
+	and event accessors.
+
 2008-04-05  Gert Driesen  (drieseng@users.sourceforge.net>
 
 	* cormissing.css: Allow nested enums and parameters to be collapsed.
